--- a/c2w-foundation/c2w-gui/pom.xml
+++ b/c2w-foundation/c2w-gui/pom.xml
@@ -1,38 +1,40 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.c2w</groupId>
-    <artifactId>c2w-foundation</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>c2w-gui</artifactId>
-  
-  <dependencies>
-    <dependency>
-      <groupId>gnu.getopt</groupId>
-      <artifactId>java-getopt</artifactId>
-      <version>1.0.13</version>
-    </dependency>
-    <dependency>
-      <groupId>org.c2w</groupId>
-      <artifactId>base-events</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.c2w</groupId>
-      <artifactId>utils</artifactId>
-      <version>${project.version}</version>
-    </dependency>   
-    <dependency>
-      <groupId>org.c2w</groupId>
-      <artifactId>c2w-coa-gui</artifactId>
-      <version>${project.version}</version>
-    </dependency>  
-    <dependency>
-      <groupId>org.c2w</groupId>
-      <artifactId>federation-manager</artifactId>
-      <version>${project.version}</version>
-    </dependency> 
-  </dependencies>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.c2w</groupId>
+        <artifactId>c2w-foundation</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>${cpswt.version}</version>
+    </parent>
+    <artifactId>c2w-gui</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>gnu.getopt</groupId>
+            <artifactId>java-getopt</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.c2w</groupId>
+            <artifactId>base-events</artifactId>
+            <version>${cpswt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.c2w</groupId>
+            <artifactId>utils</artifactId>
+            <version>${cpswt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.c2w</groupId>
+            <artifactId>c2w-coa-gui</artifactId>
+            <version>${cpswt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.c2w</groupId>
+            <artifactId>federation-manager</artifactId>
+            <version>${cpswt.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
