--- a/c2w-foundation/federate-base/pom.xml
+++ b/c2w-foundation/federate-base/pom.xml
@@ -1,42 +1,45 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.c2w</groupId>
-    <artifactId>c2w-foundation</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>federate-base</artifactId>
-  
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>com.github.maven-nar</groupId>
-        <artifactId>nar-maven-plugin</artifactId>
-        <version>3.2.3</version>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>nar-package</id>
-            <goals>
-              <goal>nar-package</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  
-  <dependencies>
-    <dependency>
-      <groupId>org.c2w</groupId>
-      <artifactId>base-events</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-		<groupId>org.scijava</groupId>
-		<artifactId>native-lib-loader</artifactId>
-		<version>2.1.3</version>
-	</dependency>
-  </dependencies>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.c2w</groupId>
+        <artifactId>c2w-foundation</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>${cpswt.version}</version>
+    </parent>
+
+    <artifactId>federate-base</artifactId>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.maven-nar</groupId>
+                <artifactId>nar-maven-plugin</artifactId>
+                <version>3.2.3</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>nar-package</id>
+                        <goals>
+                            <goal>nar-package</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.c2w</groupId>
+            <artifactId>base-events</artifactId>
+            <version>${cpswt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scijava</groupId>
+            <artifactId>native-lib-loader</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+    </dependencies>
+
 </project>
