--- a/c2w-foundation/fedmanager-host/pom.xml
+++ b/c2w-foundation/fedmanager-host/pom.xml
@@ -2,12 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>c2w-foundation</artifactId>
-        <groupId>org.c2w</groupId>
-        <version>0.3.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.c2w</groupId>
+        <artifactId>c2w-foundation</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>${cpswt.version}</version>
+    </parent>
 
     <artifactId>fedmanager-host</artifactId>
 
@@ -15,7 +16,7 @@
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>federation-manager</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>${cpswt.version}</version>
         </dependency>
     </dependencies>
 
