--- a/c2w-foundation/hla-wrapper/pom.xml
+++ b/c2w-foundation/hla-wrapper/pom.xml
@@ -4,15 +4,17 @@
     <parent>
         <groupId>org.c2w</groupId>
         <artifactId>c2w-foundation</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+        <version>${cpswt.version}</version>
     </parent>
+
     <artifactId>hla-wrapper</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.porticoproject</groupId>
             <artifactId>portico</artifactId>
-            <version>2.0.2</version>
+            <version>${portico.version}</version>
         </dependency>
     </dependencies>
 </project>
