pom versions updated; testing to run exec:exec

--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -1,18 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.c2w</groupId>
-    <artifactId>c2w-foundation</artifactId>
-    <version>${cpswt.version}</version>
-    <packaging>pom</packaging>
-    <name>C2 Windtunnel Java Foundation</name>
-    <description>Foundation packages and classes of C2 Windtunnel Java RTI and Federates</description>
 
     <properties>
         <cpswt.version>0.4.0-SNAPSHOT</cpswt.version>
         <portico.version>2.1.0</portico.version>
         <maven.repository.url>http://cpswtng_archiva:8080/repository</maven.repository.url>
     </properties>
+
+    <groupId>org.c2w</groupId>
+    <artifactId>c2w-foundation</artifactId>
+    <version>0.4.0-SNAPSHOT</version>
+
+    <packaging>pom</packaging>
+    <name>C2 Windtunnel Java Foundation</name>
+    <description>Foundation packages and classes of C2 Windtunnel Java RTI and Federates</description>
 
     <modules>
         <module>hla-wrapper</module>
@@ -89,6 +91,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.5.0</version>
             </plugin>
         </plugins>
     </build>
