--- a/c2w-foundation/c2w-coa-gui/pom.xml
+++ b/c2w-foundation/c2w-coa-gui/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.c2w</groupId>
         <artifactId>c2w-foundation</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>${cpswt.version}</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>c2w-coa-gui</artifactId>
@@ -14,17 +14,17 @@
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>base-events</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>utils</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>c2w-coa</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.tinyjee.jgraphx</groupId>
