--- a/c2w-foundation/c2w-gui/pom.xml
+++ b/c2w-foundation/c2w-gui/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.c2w</groupId>
         <artifactId>c2w-foundation</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>${cpswt.version}</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <artifactId>c2w-gui</artifactId>
 
@@ -18,22 +18,22 @@
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>base-events</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>utils</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>c2w-coa-gui</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>federation-manager</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
