--- a/c2w-foundation/c2w-logging/pom.xml
+++ b/c2w-foundation/c2w-logging/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.c2w</groupId>
         <artifactId>c2w-foundation</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>${cpswt.version}</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>c2w-logging</artifactId>
