--- a/c2w-foundation/federation-manager/pom.xml
+++ b/c2w-foundation/federation-manager/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.c2w</groupId>
         <artifactId>c2w-foundation</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>${cpswt.version}</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>federation-manager</artifactId>
@@ -14,17 +14,17 @@
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>federate-base</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>c2w-coa</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>c2w-coa-gui</artifactId>
-            <version>${cpswt.version}</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
