--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -33,7 +33,7 @@
 
     <profiles>
         <profile>
-            <id>fedhost-execjava</id>
+            <id>fedhost-execjava-clargs</id>
             <build>
                 <plugins>
                     <plugin>
@@ -80,9 +80,57 @@
                                 <argument>--federationName</argument>
                                 <argument>HelloWorld</argument>
                             </arguments>
+
+                            <!--
+                            this doesn't work in the exec:java case
                             <environmentVariables>
                                 <C2WTROOT>${project.build.directory}</C2WTROOT>
                             </environmentVariables>
+                            -->
+
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>fedhost-execjava-inputfile</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>c2w.FederationManagerHost</mainClass>
+                            <classpathScope>runtime</classpathScope>
+
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>java.net.preferIPv4Stack</key>
+                                    <value>true</value>
+                                </systemProperty>
+                                <systemProperty>
+                                    <key>log4j.configuration</key>
+                                    <value>file:resources/log4j.properties</value>
+                                </systemProperty>
+                            </systemProperties>
+
+                            <arguments>
+                                <argument>config.properties</argument>
+                            </arguments>
+
+                            <!--
+                           this doesn't work in the exec:java case
+                           <environmentVariables>
+                               <C2WTROOT>${project.build.directory}</C2WTROOT>
+                           </environmentVariables>
+                           -->
+
                         </configuration>
                     </plugin>
                 </plugins>
