dropwizard implementation for FederationManagerHost
- added FederationManagerState -- need to be implemented in FedMgr
- added Resource for "/fedmgr-control"
- api classes need to be finetuned
- maven setup for dropwizard

--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -44,7 +44,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>c2w.FederationManagerHost</mainClass>
+                            <mainClass>c2w.host.FederationManagerHost</mainClass>
                             <classpathScope>runtime</classpathScope>
 
                             <systemProperties>
@@ -106,7 +106,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>c2w.FederationManagerHost</mainClass>
+                            <mainClass>c2w.host.FederationManagerHost</mainClass>
                             <classpathScope>runtime</classpathScope>
 
                             <systemProperties>
