--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -136,6 +136,51 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>dropwizard</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>c2w.host.FederationManagerHostApplication</mainClass>
+                            <classpathScope>runtime</classpathScope>
+
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>java.net.preferIPv4Stack</key>
+                                    <value>true</value>
+                                </systemProperty>
+                                <systemProperty>
+                                    <key>log4j.configuration</key>
+                                    <value>file:resources/log4j.properties</value>
+                                </systemProperty>
+                            </systemProperties>
+
+                            <arguments>
+                                <argument>server</argument>
+                                <argument>fedmgrconfig.yml</argument>
+                            </arguments>
+
+                            <!--
+                           this doesn't work in the exec:java case
+                           <environmentVariables>
+                               <C2WTROOT>${project.build.directory}</C2WTROOT>
+                           </environmentVariables>
+                           -->
+
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
 
