--- a/c2w-foundation/federation-manager/pom.xml
+++ b/c2w-foundation/federation-manager/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>dropwizard-jackson</artifactId>
             <version>1.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
