--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -4,7 +4,7 @@
 
     <properties>
         <cpswt.version>0.4.0-SNAPSHOT</cpswt.version>
-        <portico.version>2.1.0</portico.version>
+        <portico.version>2.1.0-LOG4J</portico.version>
         <dropwizard.version>1.0.3</dropwizard.version>
         <maven.repository.url>http://cpswtng_archiva:8080/repository</maven.repository.url>
     </properties>
@@ -33,25 +33,6 @@
         <module>fedmanager-exec</module>
         <module>fedmanager-host</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.porticoproject</groupId>
-            <artifactId>portico</artifactId>
-            <version>${portico.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.14</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-
-    </dependencies>
 
     <build>
         <plugins>
@@ -103,6 +84,42 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.5.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+            </plugin>
+
+            <!-- Maven assembly plugin to build one fat jar
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+
+                <configuration>
+                    <finalName>finalName</finalName>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>c2w.host.FederationManagerHostApplication</mainClass>
+                        </manifest>
+                    </archive>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
+
         </plugins>
     </build>
 
