--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -34,6 +34,14 @@
         <module>fedmanager-host</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
