external files loaded from root folder; relative path in yml from now;

--- a/c2w-examples-structured/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
+++ b/c2w-examples-structured/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
@@ -308,6 +308,8 @@
             <build>
                 <plugins>
                     <!--
+                    To run this part: `mvn process-resources -U -X -P FedManager`
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-resources-plugin</artifactId>
