base url no trailing /

--- a/c2w-examples-structured/support_files/helloworld/v1/pom.xml
+++ b/c2w-examples-structured/support_files/helloworld/v1/pom.xml
@@ -354,7 +354,7 @@
 
                             <arguments>
                                 <argument>server</argument>
-                                <argument>${project.basedir}/fedmgrconfig.yml</argument>
+                                <argument>${project.basedir}/input/fedmgrconfig.yml</argument>
                             </arguments>
                         </configuration>
                     </plugin>
