--- a/c2w-examples-structured/support_files/helloworld/v1/pom.xml
+++ b/c2w-examples-structured/support_files/helloworld/v1/pom.xml
@@ -298,6 +298,12 @@
                     <groupId>org.c2w</groupId>
                     <artifactId>fedmanager-host</artifactId>
                     <version>0.4.0-SNAPSHOT</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>log4j-over-slf4j</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.porticoproject</groupId>
