bind localhost; added source debug profile to pom.xml; autostart prep

--- a/c2w-foundation/fedmanager-exec/fedmgrconfig.yml
+++ b/c2w-foundation/fedmanager-exec/fedmgrconfig.yml
@@ -10,7 +10,7 @@ federationManagerParameter:
   ScriptFilename: script.xml
   LogDir: log
   LogLevel: NORMAL
-  FederationName: HelloWorld
+  FederationName: HelloWorld_Java_Tutorial
   StopScriptPath: Main/stop.sh
 
 server:
