--- a/c2w-examples-structured/support_files/helloworld/v1/pom.xml
+++ b/c2w-examples-structured/support_files/helloworld/v1/pom.xml
@@ -253,6 +253,53 @@
             </build>
         </profile>
         <profile>
+            <id>SourceDebug</id>
+            <properties>
+                <federate.name>Source</federate.name>
+                <federate.loglevel>NORMAL</federate.loglevel>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.porticoproject</groupId>
+                    <artifactId>portico</artifactId>
+                    <version>2.1.0-LOG4J</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>java.net.preferIPv4Stack</key>
+                                    <value>true</value>
+                                </systemProperty>
+                            </systemProperties>
+
+                            <classpathScope>runtime</classpathScope>
+                            <mainClass>${federation.name}.${federate.name}</mainClass>
+
+                            <arguments>
+                                <!--<argument>${federation.name}.${federate.name}</argument>-->
+                                <argument>${federation.name}</argument>
+                                <argument>${federate.name}</argument>
+                                <argument>${federate.loglevel}</argument>
+                            </arguments>
+                            <!--<environmentVariables>-->
+                                <!--<EXEDIR>${project.basedir}/target/${federate.name}</EXEDIR>-->
+                            <!--</environmentVariables>-->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>PingCounter</id>
             <properties>
                 <federate.name>PingCounter</federate.name>
