--- a/c2w-examples-structured/support_files/helloworld/v1/pom.xml
+++ b/c2w-examples-structured/support_files/helloworld/v1/pom.xml
@@ -239,7 +239,7 @@
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-classpath</argument>
                                 <classpath/>
-                                <argument>${federation.name}.${federate.name}</argument>
+                                <!--<argument>${federation.name}.${federate.name}</argument>-->
                                 <argument>${federation.name}</argument>
                                 <argument>${federate.name}</argument>
                                 <argument>${federate.loglevel}</argument>
@@ -262,7 +262,7 @@
                 <dependency>
                     <groupId>org.porticoproject</groupId>
                     <artifactId>portico</artifactId>
-                    <version>2.1.0-LOG4J</version>
+                    <version>2.1.0</version>
                 </dependency>
             </dependencies>
             <build>
