--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -138,7 +138,7 @@
         </profile>
 
         <profile>
-            <id>dropwizard</id>
+            <id>RESTfulFedMgr</id>
             <build>
                 <plugins>
                     <plugin>
