--- a/c2w-examples-structured/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
+++ b/c2w-examples-structured/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
@@ -45,19 +45,6 @@
             <resource>
                 <directory>src/experiments</directory>
             </resource>
-            <resource>
-                <directory>${project.basedir}</directory>
-                <includes>
-                    <include>pom.xml</include>
-                    <include>src/fedmgrconfig.yml</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src</directory>
-                <includes>
-                    <include>fedmgrconfig.yml</include>
-                </includes>
-            </resource>
         </resources>
         <plugins>
             <plugin>
@@ -173,96 +160,40 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <profiles>
+    <pofiles>
         <profile>
             <id>Sink</id>
             <properties>
                 <federate.name>Sink</federate.name>
                 <federate.loglevel>NORMAL</federate.loglevel>
             </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.porticoproject</groupId>
-                    <artifactId>portico</artifactId>
-                    <version>2.1.0-LOG4J</version>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.5.0</version>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-Xmx512m</argument>
-                                <argument>-Djava.net.preferIPv4Stack=true</argument>
-                                <argument>-classpath</argument>
-                                <classpath/>
-                                <argument>${federation.name}.${federate.name}</argument>
-                                <argument>${federation.name}</argument>
-                                <argument>${federate.name}</argument>
-                                <argument>${federate.loglevel}</argument>
-                            </arguments>
-                            <environmentVariables>
-                                <EXEDIR>${project.basedir}/target/${federate.name}</EXEDIR>
-                            </environmentVariables>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
+
+
         <profile>
             <id>Source</id>
             <properties>
                 <federate.name>Source</federate.name>
-                <federate.loglevel>NORMAL</federate.loglevel>
             </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>org.porticoproject</groupId>
-                    <artifactId>portico</artifactId>
-                    <version>2.1.0-LOG4J</version>
-                </dependency>
-            </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.5.0</version>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-Xmx512m</argument>
-                                <argument>-Djava.net.preferIPv4Stack=true</argument>
-                                <argument>-classpath</argument>
-                                <classpath/>
-                                <argument>${federation.name}.${federate.name}</argument>
-                                <argument>${federation.name}</argument>
-                                <argument>${federate.name}</argument>
-                                <argument>${federate.loglevel}</argument>
-                            </arguments>
-                            <environmentVariables>
-                                <EXEDIR>${project.basedir}/target/${federate.name}</EXEDIR>
-                            </environmentVariables>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
+
         <profile>
             <id>PingCounter</id>
             <properties>
                 <federate.name>PingCounter</federate.name>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>ExecExec</id>
+            <properties>
                 <federate.loglevel>NORMAL</federate.loglevel>
             </properties>
             <dependencies>
                 <dependency>
                     <groupId>org.porticoproject</groupId>
                     <artifactId>portico</artifactId>
-                    <version>2.1.0-LOG4J</version>
+                    <version>2.1.0</version>
                 </dependency>
             </dependencies>
             <build>
@@ -291,55 +222,21 @@
                 </plugins>
             </build>
         </profile>
+
         <profile>
-            <id>FedManager</id>
+            <id>ExecJava</id>
+            <properties>
+                <federate.loglevel>NORMAL</federate.loglevel>
+            </properties>
             <dependencies>
-                <dependency>
-                    <groupId>org.c2w</groupId>
-                    <artifactId>fedmanager-host</artifactId>
-                    <version>0.4.0-SNAPSHOT</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.slf4j</groupId>
-                            <artifactId>log4j-over-slf4j</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
                 <dependency>
                     <groupId>org.porticoproject</groupId>
                     <artifactId>portico</artifactId>
-                    <version>2.1.0-LOG4J</version>
+                    <version>2.1.0</version>
                 </dependency>
             </dependencies>
             <build>
                 <plugins>
-                    <!--
-                    To run this part: `mvn process-resources -U -X -P FedManager`
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>3.0.2</version>
-                        <executions>
-                            <execution>
-                                <id>copy-resources</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.basedir}/target/conf/</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${project.basedir}/src/conf</directory>
-                                            <include>fedmgrconfig.yml</include>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    -->
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
@@ -348,9 +245,6 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>c2w.host.FederationManagerHostApplication</mainClass>
-                            <classpathScope>runtime</classpathScope>
-
                             <systemProperties>
                                 <systemProperty>
                                     <key>java.net.preferIPv4Stack</key>
@@ -358,15 +252,20 @@
                                 </systemProperty>
                             </systemProperties>
 
+                            <classpathScope>runtime</classpathScope>
+                            <mainClass>${federation.name}.${federate.name}</mainClass>
+
                             <arguments>
-                                <argument>server</argument>
-                                <argument>${project.basedir}/src/conf/fedmgrconfig.yml</argument>
+                                <argument>${federation.name}</argument>
+                                <argument>${federate.name}</argument>
+                                <argument>${federate.loglevel}</argument>
                             </arguments>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
-    </profiles>
+
+    </pofiles>
 
 </project>
