--- a/c2w-examples-structured/HelloWorld_Java_Tutorial_3_DeploymentExporter/src/conf/fedmgrconfig.yml
+++ b/c2w-examples-structured/HelloWorld_Java_Tutorial_3_DeploymentExporter/src/conf/fedmgrconfig.yml
@@ -6,11 +6,11 @@ federationManagerParameter:
   FederationEndTime: 20.0
   Seed4Dur: 0
   AutoStart: 1
-  FOMFilename: HelloWorld_Java_Tutorial.fed
-  ScriptFilename: script.xml
+  FOMFilename: input/HelloWorld_Java_Tutorial.fed
+  ScriptFilename: input/script.xml
   LogDir: log
   LogLevel: NORMAL
-  FederationName: HelloWorld
+  FederationName: HelloWorld_Java_Tutorial
   StopScriptPath: Main/stop.sh
 
 server:
@@ -19,7 +19,7 @@ server:
   connector:
     type: http
     port: 8083
-    bindHost: 127.0.0.1
+    bindHost: 0.0.0.0
 
 logging:
   level: INFO
