portico-log4j dependencies removed completely. fedmgrconfig updated fomfile

--- a/c2w-examples-structured/HelloWorld_Java_Tutorial_1_FederatesExporter/java-federates/pom.xml
+++ b/c2w-examples-structured/HelloWorld_Java_Tutorial_1_FederatesExporter/java-federates/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>org.porticoproject</groupId>
       <artifactId>portico</artifactId>
-      <version>2.1.0-LOG4J</version>
+      <version>2.1.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
