--- a/c2w-examples-structured/HelloWorld_Java_Tutorial_2_Implementation/HelloWorld_Java_Tutorial-impl-java/pom.xml
+++ b/c2w-examples-structured/HelloWorld_Java_Tutorial_2_Implementation/HelloWorld_Java_Tutorial-impl-java/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>org.porticoproject</groupId>
       <artifactId>portico</artifactId>
-      <version>2.1.0-LOG4J</version>
+      <version>2.1.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
