--- a/c2w-examples/HelloWorld_Simple/HelloWorld_Java_impl/pom.xml
+++ b/c2w-examples/HelloWorld_Simple/HelloWorld_Java_impl/pom.xml
@@ -20,7 +20,7 @@
     	<groupId>org.porticoproject</groupId>
     	<artifactId>portico</artifactId>
     	<!--<version>2.1.0</version>-->
-      <version>2.1.0-LOG4J</version>
+      <version>2.1.0</version>
       <!--<scope>provided</scope>-->
     </dependency>
   </dependencies>
